<resources>
    <string name="app_name">CanteenApp</string>
    <string name="welcome_to_the">Welcome to the</string>
    <string name="ltu_canteen">LTU Canteen</string>
    <string name="continue_button">Continue</string>
    <string name="enter_student_number">Please enter your student number below</string>
    <string name="confirm_button">Confirm</string>
    <string name="instructions">Select your type of order. Choose your meal choice when you arrive. Pay by card only.</string>
    <string name="book_button">Seat</string>
    <string name="collect_button">Collect</string>
    <string name="title_activity_booking_reminder">BookingReminder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>